Fix length of related posts By default all flex items grow vertically as large as they can, but by applying align-items: flex-start they only occupy that much vertical space which is necessary

--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ h2::after {
 
 .row {
   display: flex;
+  align-items: flex-start;
   gap: 75px;
   margin-bottom: 60px;
 }
